# esp-tee-server-auth

./: CMakeLists.txt  README.md  sdkconfig.defaults
components/server_auth_service/: CMakeLists.txt  sec_srv_tbl_server_auth.yml  server_auth_service.c  tee_project.cmake
components/server_auth_service/include/: server_auth_service.h
docs/: comparative_analysis.md  protocol.md
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c
server/: server.py
